--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ember-mb-menu",
-  "version": "0.0.1",
+  "name": "mb-menu",
+  "version": "0.0.2",
   "directories": {
     "doc": "doc",
     "test": "tests"
