Simplify and tidy
* remove ‘clear’ functionality
* add `by` property for multiple selection
* remove hard-coded classes and allow setting new ones
* added `bubbles` 
* rename to `ember-mb-menu`

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mb-menu",
-  "version": "0.0.2",
+  "name": "ember-mb-menu",
+  "version": "0.1.0",
   "directories": {
     "doc": "doc",
     "test": "tests"
