--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "menu"
   ],
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "demoURL": "http://minutebase.github.io/mb-menu"
   }
 }
